fix: announcement-stripe overflowing at lower horizontal resolutions
Also fixed layering issue due to background transparency

--- a/theme/custom.css
+++ b/theme/custom.css
@@ -95,7 +95,7 @@
 }
 
 .announcement-stripe {
-    background-color: #ff00004f;
+    background-color: #5e1118;
     font-weight: bold;
     color: #fff;
     padding: 10px;
@@ -108,17 +108,6 @@
 
 .announcement-stripe p {
     margin: 0;
-}
-
-@media (max-width: 768px) {
-    .announcement-stripe p {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .announcement-stripe p span {
-        display: block;
-    }
 }
 
 /* Add this new style for the sidebar */
